# toy-wm

./: .gitattributes  .gitignore  .gitignore_hf  ANSWER.md  DEPLOYMENT_GUIDE.md  FLEX_ATTENTION_GUIDE.md  FLEX_VS_SDPA_CLARIFICATION.md  HF_DEPLOYMENT_INDEX.md  HF_README.md  HF_SPACE_FILES_SUMMARY.md  PERFORMANCE_RESULTS.md  QUICK_START.md  README.md  app.py  benchmark_compile.py  dmd.logsource  generate_with_cache.ipynb  generate_with_cache_f2f.ipynb  main.py  play_pong copy.py  play_pong.py  play_pong_multi.py  pyproject.toml  requirements.txt  scratchpad.ipynb  setup_hf_space.py  upload_checkpoint_to_hf.py
configs/: bidirectional.yaml  bidirectional_beefy.yaml  bigger_1frame.yaml  bigger_30frame.yaml  bigger_30frame_causal.yaml  bigger_30frame_causal2.yaml  bigger_30frame_causal_learn_fp32.yaml  bigger_30frame_causal_posttrain.yaml  bigger_30frame_causal_rope_bf16_flex.yaml  bigger_30frame_causal_vidrope_bf16_flex.yaml  bigger_30frame_causal_vidrope_fp32.yaml  bigger_30frame_causal_vidrope_fp32_lnfirst.yaml  bigger_30frame_f2f.yaml  bigger_dmd.yaml  bigger_dmd_debug.yaml  bigger_dmd_force.yaml  bigger_dmd_teacher.yaml  causal.yaml  causal_beefy.yaml  config.yaml  default.yaml  framerope_1frame.yaml  inference.yaml  inference_6h.yaml  inference_f2f.yaml  inference_learn_6h.yaml  inference_vid.yaml  inference_vid_6h.yaml  jupyter.yaml  multi.yaml  naive.yaml  poc.yaml  poc_1frame.yaml  poc_30frame.yaml  poc_30frame_causal.yaml  poc_causal.yaml  small.yaml  small_1frame.yaml  small_6frame.yaml  small_poc.yaml
scripts/: benchmark_conditioning.py  convert_frames_to_mp4.py  (+5 more)
(+91 files in other folders)
